fix: preview feature not enabled in CI